working on internal tools

--- a/templates/sesh/team_dashboard.html
+++ b/templates/sesh/team_dashboard.html
@@ -45,9 +45,9 @@
 </div>
 
 <div id='footer'>
-   <a href="/django/accounts/contests/leaderboard/">leaderboard</a>
-   <a href="/django/groups/course_groups/dashboard/">course group dashboard</a>
-   <a href="/django/accounts/contests/leaderboard/">stats</a>
+   <a href="'/django/tools/leaderboard/'">leaderboard</a>
+   <a href="'/django/tools/dashboard/'">course group dashboard</a>
+   <a href="'/django/tools/dashboard/'">stats</a>
 </div>
 
 </body>
