--- a/templates/sesh/team_chat.html
+++ b/templates/sesh/team_chat.html
@@ -29,7 +29,7 @@
     </form>
   </div>
 
-  <div clas='divider'>
+  <div id='user_content' clas='divider'>
     <p>Name: {{ user_obj.full_name }}</p>
     <p>Email: {{ user_obj.email }}</p>
     <p>School: {{ user_obj.school.name }}</p>
@@ -64,9 +64,9 @@
 </div>
 
 <div id='footer'>
-   <a href="'/django/tools/leaderboard/'">leaderboard</a>
-   <a href="'/django/tools/dashboard/'">course group dashboard</a>
-   <a href="'/django/tools/dashboard/'">stats</a>
+   <a href='/django/tools/leaderboard/'>leaderboard</a>
+   <a href='/django/tools/dashboard/'>course group dashboard</a>
+   <a href='/django/tools/dashboard/'>stats</a>
 </div>
 
 </body>
