course group page and leaderboard fix

--- a/templates/sesh/course_group_dashboard.html
+++ b/templates/sesh/course_group_dashboard.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Team Dashboard</title>
+    <title>Course Groups</title>
     <link rel="stylesheet" type="text/css" href="{% static 'sesh/style.css' %}">
 </head>
 <body>
@@ -15,8 +15,25 @@
     <h1>course group dashboard</h1>
   </div>
 
+  <div id='general_stats'>
+    <p>{{ num_groups }} Course Groups</p>
+    <p>{{ num_lonely_groups }} Lonely Course Groups :(</p>
+  </div>
+
   <div class='divider'>
-    
+    <ul>
+      {% for group in course_groups %}
+        <li>
+          <div class='group_detail'>
+          <p>{{ group.school_name }}  -  {{ group.course_name }}  -  {{ group.professor_name }}</p>
+          <p>Enrollement: {{ group.num_students }}</p>
+          <p>Total Messages: {{ group.num_messages }}</p>
+          <p>Total Uploads: {{ group.num_uploads }}</p>
+          <p>Date Created: {{ group.timestamp }}</p>
+          <div>
+        </li>
+      {% endfor %}
+    </ul>    
   </div>
 
 </div>
